apps/api/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comedor-api
  namespace: app-comedor-fsn
  labels:
    app.kubernetes.io/name: comedor-api
    app.kubernetes.io/part-of: app-comedor-fsn
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: f5-nginx
  rules:
    - host: api-comedor-fsn.fasani.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: comedor-api
                port:
                  number: 3000
